05 - Configurado el frontend para que se sirva desde el server

--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/index.html
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/index.html
@@ -9,9 +9,9 @@
 		<!-- Title -->
  		<title>E-Commerce Online Shop</title>
  		<!-- Style Sheet -->
-		<link rel="stylesheet" type="text/css" href="../static/css/style.css" />
+		<link rel="stylesheet" type="text/css" href="/static/css/style.css" />
 		<!-- Javascript -->	
-		<script type="text/javascript" src="../static/js/jquery.min.js"></script>
+		<script type="text/javascript" src="/static/js/jquery.min.js"></script>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
   		<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
   		<script>
@@ -32,7 +32,7 @@
 			<div class="brand">
 				<div class="logo">
 					<a href="index.html">
-						<img src="../static/img/icons/online_shopping.png">
+						<img src="/static/img/icons/online_shopping.png">
 						<div class="logo-text">
 							<p class="big-logo">Ecommerce</p>
 							<p class="small-logo">online shop</p>
@@ -41,7 +41,7 @@
 				</div> <!-- logo -->
 				<div class="shop-icon">
 					<div class="dropdown">
-						<img src="../static/img/icons/account.png">
+						<img src="/static/img/icons/account.png">
 						<div class="dropdown-menu">
 							<ul>
 								<li><a href="account.html">My Account</a></li>
@@ -50,7 +50,7 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="../static/img/icons/shopping_cart.png">
+						<img src="/static/img/icons/shopping_cart.png">
 						<div class="dropdown-menu cart-item">
 							<table border="1">
 								<thead>
@@ -64,14 +64,14 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="../static/img/product/img1.jpg"></td>
+										<td><img src="/static/img/product/img1.jpg"></td>
 										<td>product name</td>
 										<td class="center">1200</td>
 										<td class="center">2</td>
 										<td class="center">2400</td>
 									</tr>
 									<tr>
-										<td><img src="../static/img/product/img2.jpg"></td>
+										<td><img src="/static/img/product/img2.jpg"></td>
 										<td>product name</td>
 										<td class="center">1500</td>
 										<td class="center">2</td>
@@ -97,7 +97,7 @@
 					<form>
 						<div class="form-group">
 							<input type="text" class="form-control" name="search" placeholder="Search">
-							<img src="../static/img/icons/search.png">
+							<img src="/static/img/icons/search.png">
 						</div>
 					</form>
 				</div>
@@ -109,7 +109,7 @@
 		<main>
 			<div class="slider">
 				<div class="slide-1">
-					<img src="../static/img/slider/slide-1.jpg">
+					<img src="/static/img/slider/slide-1.jpg">
 					<div class="slider-text">
 						<h3>Sale 40% off</h3>
 						<h2>Men's Watches</h2>
@@ -117,7 +117,7 @@
 					</div>
 				</div>
 				<div class="slide-2">
-					<img src="../static/img/slider/slide-2.jpg">
+					<img src="/static/img/slider/slide-2.jpg">
 					<div class="slider-text">
 						<h3>Sale 20% off</h3>
 						<h2>Women's Fashion</h2>
@@ -125,7 +125,7 @@
 					</div>
 				</div>
 				<div class="slide-3">
-					<img src="../static/img/slider/slide-3.jpg">
+					<img src="/static/img/slider/slide-3.jpg">
 					<div class="slider-text">
 						<h3>Sale 50% off</h3>
 						<h2>Women's Collection</h2>
@@ -136,13 +136,13 @@
 
 			<div class="new-product-section">
 				<div class="product-section-heading">
-					<h2>Tranding Products <img src="../static/img/icons/increase.png"></h2>
+					<h2>Tranding Products <img src="/static/img/icons/increase.png"></h2>
 					<h3>Most selling product for the month</h3>
 				</div>
 				<div class="product-content">
 					<div class="product">
 						<a href="product.html">
-							<img src="../static/img/product/img1.jpg">
+							<img src="/static/img/product/img1.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Watches</h3>
@@ -153,7 +153,7 @@
 					</div>
 					<div class="product">
 						<a href="product.html">
-							<img src="../static/img/product/img2.jpg">
+							<img src="/static/img/product/img2.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Pants</h3>
@@ -164,7 +164,7 @@
 					</div>
 					<div class="product">
 						<a href="product.html">
-							<img src="../static/img/product/img3.jpg">
+							<img src="/static/img/product/img3.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Watches</h3>
@@ -175,7 +175,7 @@
 					</div>
 					<div class="product">
 						<a href="product.html">
-							<img src="../static/img/product/img4.jpg">
+							<img src="/static/img/product/img4.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Shoes</h3>
@@ -186,7 +186,7 @@
 					</div>
 					<div class="product">
 						<a href="product.html">
-							<img src="../static/img/product/img5.jpg">
+							<img src="/static/img/product/img5.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Glasses</h3>
@@ -197,7 +197,7 @@
 					</div>
 					<div class="product">
 						<a href="product.html">
-							<img src="../static/img/product/img6.jpg">
+							<img src="/static/img/product/img6.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Women's / Hand Bags</h3>
@@ -208,7 +208,7 @@
 					</div>
 					<div class="product">
 						<a href="product.html">
-							<img src="../static/img/product/img7.jpg">
+							<img src="/static/img/product/img7.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Shoes</h3>
@@ -219,7 +219,7 @@
 					</div>
 					<div class="product">
 						<a href="product.html">
-							<img src="../static/img/product/img8.jpg">
+							<img src="/static/img/product/img8.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Women's / Hand Bags</h3>
@@ -242,13 +242,13 @@
 
 			<div class="new-product-section">
 				<div class="product-section-heading">
-					<h2>Recommend Products <img src="../static/img/icons/good_quality.png"></h2>
+					<h2>Recommend Products <img src="/static/img/icons/good_quality.png"></h2>
 					<h3>OUR BEST PRODUCTS RECOMMENDED FOR YOU</h3>
 				</div>
 				<div class="product-content">
 					<div class="product">
 						<a href="product.html">
-							<img src="../static/img/product/img1.jpg">
+							<img src="/static/img/product/img1.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Watches</h3>
@@ -259,7 +259,7 @@
 					</div>
 					<div class="product">
 						<a href="product.html">
-							<img src="../static/img/product/img2.jpg">
+							<img src="/static/img/product/img2.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Pants</h3>
@@ -270,7 +270,7 @@
 					</div>
 					<div class="product">
 						<a href="product.html">
-							<img src="../static/img/product/img3.jpg">
+							<img src="/static/img/product/img3.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Watches</h3>
@@ -281,7 +281,7 @@
 					</div>
 					<div class="product">
 						<a href="product.html">
-							<img src="../static/img/product/img4.jpg">
+							<img src="/static/img/product/img4.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Shoes</h3>
@@ -331,9 +331,9 @@
 					<div class="widget-content">
 						<div class="follow">
 							<ul>
-								<li><a href="#"><img src="../static/img/icons/facebook.png"></a></li>
-								<li><a href="#"><img src="../static/img/icons/twitter.png"></a></li>
-								<li><a href="#"><img src="../static/img/icons/instagram.png"></a></li>
+								<li><a href="#"><img src="/static/img/icons/facebook.png"></a></li>
+								<li><a href="#"><img src="/static/img/icons/twitter.png"></a></li>
+								<li><a href="#"><img src="/static/img/icons/instagram.png"></a></li>
 							</ul>
 						</div>						
 					</div>
@@ -345,7 +345,7 @@
 							<form>
 								<div class="form-group">
 									<input type="text" class="form-control" name="subscribe" placeholder="Email">
-									<img src="../static/img/icons/paper_plane.png">
+									<img src="/static/img/icons/paper_plane.png">
 								</div>
 							</form>
 						</div>						
@@ -357,9 +357,9 @@
 					<p>Copyright 2021 - All Rights Reserved</p>
 				</div>
 				<div class="payment-mode">
-					<img src="../static/img/icons/paper_money.png">
-					<img src="../static/img/icons/visa.png">
-					<img src="../static/img/icons/mastercard.png">
+					<img src="/static/img/icons/paper_money.png">
+					<img src="/static/img/icons/visa.png">
+					<img src="/static/img/icons/mastercard.png">
 				</div>
 			</div> <!-- Footer Bar -->
 		</div>
